syntax = "proto3";

package ai.metathings.service.identityd2;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message IssueTokenByCredentialRequest {
	OpCredential credential = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.Timestamp timestamp = 2 [(validator.field) = {msg_exists: true}];
	google.protobuf.Int64Value nonce = 3 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue hmac = 4 [(validator.field) = {msg_exists: true}];
}

message IssueTokenByCredentialResponse {
	Token token = 1;
}
